AMBARI-26639: Stabilize Java functional tests on JDK 17